--- a/index.html
+++ b/index.html
@@ -1,59 +1,58 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Andrew Zhen</title>
 	<link rel="icon" href="favicon.png" type="image/png">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<script src="script.js"></script>
-
 <body>
 	<!-- landing page -->
 	<section class="background_picture">
 			<div class="intro">
-				<h1>Andrew Zhen</h1>
+				<h1>ANDREW ZHEN</h1>
 
-				<div>
-					<a href="https://www.facebook.com/zhen.andrew" class="fa fa-facebook"></a>
-					<a href="https://www.instagram.com/a.jzhen/" class="fa fa-instagram"></a>
-					<a href="https://accounts.snapchat.com/accounts/snapcodes" class="fa fa-snapchat-ghost"></a>
-					<a href="https://accounts.snapchat.com/accounts/snapcodes" class="fa fa-wechat"></a>
-				</div>
-
-				<div>
-					<p>WHAT YOU THINK, YOU BECOME. &nbsp&nbsp WHAT YOU FEEL, YOU ATTRACT. &nbsp&nbsp WHAT YOU IMAGINE, YOU CREATE.</p>
+				<div class="quote">
+					<p>WHAT YOU THINK, YOU BECOME &nbsp&nbsp WHAT YOU FEEL, YOU ATTRACT &nbsp&nbsp WHAT YOU IMAGINE, YOU CREATE</p>
 				</div>
 			</div>
 	</section>
 
 	<!-- about -->
-	<section>
+	<section style="text-align: center">
 		<div class="about">
 			<h1>About</h1>
 			<p>甄家豪</p>
 		</div>
+
+		<table class="table" align="center" cellpadding="20px">
+			<tr>
+				<th class="portrait"></th>
+				<th style="text-align: left">
+					<p>
+						Hi everyone, I'm Andrew and this is my own little part of the internet where I get to share my life for all to see!
+					</p>
+
+					<p>
+						I'm a student at the University of California, San Diego studying Cognitive Science, specializing in machine learning and computation, class of 2020. 
+					</p>
+
+					<p>
+						If you ever want to&nbsp<img src="camera.png" width="30" height="25"> or <img src="basketball.png" width="30" height="25">&nbsp, you can reach me at the social media links below.
+					</p>
+				</th>
+			</tr>	
+		</table>
+
+		<div>
+			<a href="https://www.facebook.com/zhen.andrew" class="fa fa-facebook"></a>
+			<a href="https://www.instagram.com/a.jzhen/" class="fa fa-instagram"></a>
+			<a href="https://accounts.snapchat.com/accounts/snapcodes" class="fa fa-snapchat-ghost"></a>
+			<a href="https://accounts.snapchat.com/accounts/snapcodes" class="fa fa-wechat"></a>
+		</div>
 	</section>
-
-	<table class="table" align="center" cellpadding="20px">
-		<tr>
-			<th class="portrait"></th>
-			<th style="text-align: left">
-				<p>
-					Hi everyone, I'm Andrew and this is my own little part of the internet where I get to share my life for all to see!
-				</p>
-
-				<p>
-					I'm a student at the University of California, San Diego studying Cognitive Science, specializing in machine learning and computation, class of 2020. 
-				</p>
-
-				<p>
-					If you ever want to&nbsp<img src="camera.png" width="30" height="25"> or <img src="basketball.png" width="30" height="25">&nbsp, you can reach me at the social media links above.
-				</p>
-			</th>
-		</tr>	
-	</table>
 
 	<hr>
 	<hr>
@@ -104,13 +103,14 @@
 		</ul>
 	</section>
 
-	<!-- scroll to top -->
-	<div style="text-align: center">
-		<button id="topButton" onclick="topPage()">^</button>
-	</div>
-
 	 <!-- <audio loop autoplay> -->
 		<!-- <source src="sound.mp3"> -->
 	 <!-- </audio> -->
+	 <footer>
+	 	<p>Photos taken from a Nikon D3300 18-55mm f/3.5-5.6 and a OnePlus 3<img src="faviconBlack.png" style="padding-right: 100px; width: 30px; height: 30px; float: right">
+	 	</p>
+	 </footer>
 </body>
+
+<script src="script.js"></script>
 </html>
