--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<a href="https://www.facebook.com/zhen.andrew" class="fa fa-facebook"></a>
 			<a href="https://www.instagram.com/a.jzhen/" class="fa fa-instagram"></a>
 			<a href="https://accounts.snapchat.com/accounts/snapcodes" class="fa fa-snapchat-ghost"></a>
-			<a href="https://accounts.snapchat.com/accounts/snapcodes" class="fa fa-wechat"></a>
+			<a id="wechat" class="fa fa-wechat"></a>
 		</div>
 	</section>
 
@@ -78,15 +78,15 @@
 
 		<div id="contentPage" align="left" style="padding-left: 145px; padding-top: 100px">
 			<div id="Photography">
-				<a href="beach.jpg"><img src="pho1.jpg" hspace="30" vspace="30"></a>
-				<a href="beach.jpg"><img src="pho2.jpg" hspace="30" vspace="30"></a>
-				<a href="beach.jpg"><img src="pho3.jpg" hspace="30" vspace="30"></a>
-				<a href="beach.jpg"><img src="pho4.jpg" hspace="30" vspace="30"></a>
-				<a href="beach.jpg"><img src="pho5.jpg" hspace="30" vspace="30"></a>
-				<a href="beach.jpg"><img src="pho6.jpg" hspace="30" vspace="30"></a>
-				<a href="beach.jpg"><img src="pho7.jpg" hspace="30" vspace="30"></a>
-				<a href="beach.jpg"><img src="pho8.jpg" hspace="30" vspace="30"></a>
-				<a href="beach.jpg"><img src="pho9.jpg" hspace="30" vspace="30"></a>
+				<a><img src="pho1.jpg" hspace="30" vspace="30"></a>
+				<a><img src="pho2.jpg" hspace="30" vspace="30"></a>
+				<a><img src="pho3.jpg" hspace="30" vspace="30"></a>
+				<a><img src="pho4.jpg" hspace="30" vspace="30"></a>
+				<a><img src="pho5.jpg" hspace="30" vspace="30"></a>
+				<a><img src="pho6.jpg" hspace="30" vspace="30"></a>
+				<a><img src="pho7.jpg" hspace="30" vspace="30"></a>
+				<a><img src="pho8.jpg" hspace="30" vspace="30"></a>
+				<a><img src="pho9.jpg" hspace="30" vspace="30"></a>
 			</div>
 
 			<div id="Basketball">
@@ -107,9 +107,11 @@
 		<!-- <source src="sound.mp3"> -->
 	 <!-- </audio> -->
 	 <footer>
-	 	<p>Photos taken from a Nikon D3300 18-55mm f/3.5-5.6 and a OnePlus 3<img src="faviconBlack.png" style="padding-right: 100px; width: 30px; height: 30px; float: right">
+	 	<p>Photos taken from a Nikon D3300 18-55mm f/3.5-5.6 and a OnePlus 3<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
 	 	</p>
 	 </footer>
+
+	 <p>&nbsp</p>
 </body>
 
 <script src="script.js"></script>
