--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<h1>ANDREW ZHEN</h1>
 
 				<div class="quote">
-					<p>WHAT YOU THINK, YOU BECOME &nbsp&nbsp WHAT YOU FEEL, YOU ATTRACT &nbsp&nbsp WHAT YOU IMAGINE, YOU CREATE</p>
+					<p>" WHAT YOU THINK, YOU BECOME &nbsp&nbsp WHAT YOU FEEL, YOU ATTRACT &nbsp&nbsp WHAT YOU IMAGINE, YOU CREATE "</p>
 				</div>
 			</div>
 	</section>
@@ -27,30 +27,30 @@
 			<p>甄家豪</p>
 		</div>
 
-		<table class="table" align="center" cellpadding="20px">
-			<tr>
-				<th class="portrait"></th>
-				<th style="text-align: left">
-					<p>
-						Hi everyone, I'm Andrew and this is my own little part of the internet where I get to share my life for all to see!
-					</p>
-
+		<div class="table">
+			<div class="portrait"></div>
+			<div style="background: rgb(220,220,220);">
+				<div class="description">
 					<p>
 						I'm a student at the University of California, San Diego studying Cognitive Science, specializing in machine learning and computation, class of 2020. 
 					</p>
 
+					<div>&nbsp</div>
+
 					<p>
 						If you ever want to&nbsp<img src="camera.png" width="30" height="25"> or <img src="basketball.png" width="30" height="25">&nbsp, you can reach me at the social media links below.
 					</p>
-				</th>
-			</tr>	
-		</table>
+				</div>
+			</div>
+		</div>
 
-		<div>
-			<a href="https://www.facebook.com/zhen.andrew" class="fa fa-facebook"></a>
-			<a href="https://www.instagram.com/a.jzhen/" class="fa fa-instagram"></a>
-			<a style="cursor: pointer" id="snapChat" class="fa fa-snapchat-ghost"></a>
-			<a style="cursor: pointer" id="weChat" class="fa fa-wechat"></a>
+		<div class="socialMedia">
+			<div style="padding-top: 60px">
+				<a href="https://www.facebook.com/zhen.andrew" class="fa fa-facebook"></a>
+				<a href="https://www.instagram.com/a.jzhen/" class="fa fa-instagram"></a>
+				<a style="cursor: pointer" id="snapChat" class="fa fa-snapchat-ghost"></a>
+				<a style="cursor: pointer" id="weChat" class="fa fa-wechat"></a>
+		    </div>
 		</div>
 
 		<div id="snapChatModal" class="modal">
@@ -68,12 +68,7 @@
 				<img src="weChatQR.png" style="border-radius: 4%; width: 525px; height: 525px">
 			</div>
 		</div>
-
 	</section>
-
-	<hr>
-	<hr>
-	<hr>
 
 	<!-- interests -->
 	<section class="interests">
@@ -91,7 +86,7 @@
 
 		<button id="btn4" class="button" onclick="focus4();refreshContent('School','Traveling','Photography','Basketball')">School</a></button>
 
-		<div id="contentPage" align="left" style="padding-left: 145px; padding-top: 100px">
+		<div class="contentPage">
 			<div id="Photography">
 				<a><img id="pho1" src="pho1.jpg" hspace="30" vspace="30"></a>
 				<a><img id="pho2" src="pho2.jpg" hspace="30" vspace="30"></a>
@@ -169,6 +164,8 @@
 	 <!-- <audio loop autoplay> -->
 		<!-- <source src="sound.mp3"> -->
 	 <!-- </audio> -->
+
+	 <!-- footer -->
 	 <footer>
 	 	<p>Photos taken from a Nikon D3300 18-55mm f/3.5-5.6 and a OnePlus 3<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
 	 	</p>
