--- a/index.html
+++ b/index.html
@@ -115,47 +115,47 @@
 		<div class="phoModals">
 			<div id="pho1Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho1Span"></span><img src="pho1.jpg">
+					<span id="pho1Span" class="close">&times;</span><img src="pho1.jpg">
 				</div>
 			</div>
 			<div id="pho2Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho2Span"></span><img src="pho2.jpg">
+					<span id="pho2Span" class="close">&times;</span><img src="pho2.jpg">
 				</div>
 			</div>
 			<div id="pho3Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho3Span"></span><img src="pho3.jpg">
+					<span id="pho3Span" class="close">&times;</span><img src="pho3.jpg">
 				</div>
 			</div>
 			<div id="pho4Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho4Span"></span><img src="pho4.jpg">
+					<span id="pho4Span" class="close">&times;</span><img src="pho4.jpg">
 				</div>
 			</div>
 			<div id="pho5Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho5Span"></span><img src="pho5.jpg">
+					<span id="pho5Span" class="close">&times;</span><img src="pho5.jpg">
 				</div>
 			</div>
 			<div id="pho6Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho6Span"></span><img src="pho6.jpg">
+					<span id="pho6Span" class="close">&times;</span><img src="pho6.jpg">
 				</div>
 			</div>
 			<div id="pho7Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho7Span"></span><img src="pho7.jpg">
+					<span id="pho7Span" class="close">&times;</span><img src="pho7.jpg">
 				</div>
 			</div>
 			<div id="pho8Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho8Span"></span><img src="pho8.jpg">
+					<span id="pho8Span" class="close">&times;</span><img src="pho8.jpg">
 				</div>
 			</div>
 			<div id="pho9Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho9Span"></span><img src="pho9.jpg">
+					<span id="pho9Span" class="close">&times;</span><img src="pho9.jpg">
 				</div>
 			</div>
 		</div>
