--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="intro">
 				<h1>ANDREW ZHEN</h1>
 
-				<div class="quote">
+				<div class="quote1">
 					<p>" WHAT YOU THINK, YOU BECOME &nbsp&nbsp WHAT YOU FEEL, YOU ATTRACT &nbsp&nbsp WHAT YOU IMAGINE, YOU CREATE "</p>
 				</div>
 			</div>
@@ -83,7 +83,7 @@
 
 			<span class="bar">|</span>
 
-			<button id="btn2" class="button" onclick="focus2();refreshContent('Architecture','Landscape','Events','Events')">Architecture</a></button>
+			<button id="btn2" class="button" onclick="focus2();refreshContent('Architecture','Landscape','Events','Everyday')">Architecture</a></button>
 			
 			<span class="bar">|</span>
 
@@ -94,6 +94,11 @@
 			<button id="btn4" class="button" onclick="focus4();refreshContent('Everyday','Landscape','Architecture','Events')">Everyday</a></button>
 		</div>
 
+		<div>
+			<p class="quote2">"Photography takes an instant out of time by holding it still"</p>
+			<a href="https://en.wikipedia.org/wiki/Dorothea_Lange" class="quote2Author">- <u>Dorothea Lange</u></a>
+		</div>
+
 		<div class="contentSection">
 			<div id="Landscape" class="imageStyle">
 				<img id="land1" src="landscape/land1.jpg">
@@ -102,22 +107,51 @@
 				<img id="land4" src="landscape/land4.jpg">
 				<img id="land5" src="landscape/land5.jpg">
 				<img id="land6" src="landscape/land6.jpg">
+				<img id="land6" src="landscape/land7.jpg">
+				<img id="land6" src="landscape/land8.jpg">
+				<img id="land6" src="landscape/land9.jpg">
 			</div>
 
 			<div id="Architecture" class="imageStyle">
 				<img src="architecture/arch1.jpg">
 				<img src="architecture/arch2.jpg">
 				<img src="architecture/arch3.jpg">
+				<img src="architecture/arch4.jpg">
+				<img src="architecture/arch5.jpg">
+				<img src="architecture/arch6.jpg">
+				<img src="architecture/arch7.jpg">
+				<img src="architecture/arch8.jpg">
+				<img src="architecture/arch9.jpg">
+				<img src="architecture/arch10.jpg">
+				<img src="architecture/arch11.jpg">
+				<img src="architecture/arch12.jpg">
 			</div>
 
 			<div id="Events" class="imageStyle">
 				<img src="events/eve1.jpg">
 				<img src="events/eve2.jpg">
+				<img src="events/eve3.jpg">
+				<img src="events/eve4.jpg">
+				<img src="events/eve5.jpg">
+				<img src="events/eve6.jpg">
+				<img src="events/eve7.jpg">
+				<img src="events/eve8.jpg">
+				<img src="events/eve9.jpg">
+				<img src="events/eve10.jpg">
+				<img src="events/eve11.jpg">
+				<img src="events/eve12.jpg">
 			</div>
 
 			<div id="Everyday" class="imageStyle">
 				<img src="everyday/ed1.jpg">
 				<img src="everyday/ed2.jpg">
+				<img src="everyday/ed3.jpg">
+				<img src="everyday/ed4.jpg">
+				<img src="everyday/ed5.jpg">
+				<img src="everyday/ed6.jpg">
+				<img src="everyday/ed7.jpg">
+				<img src="everyday/ed8.jpg">
+				<img src="everyday/ed9.jpg">
 			</div>
 		</div>
 
