--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
+<body id="body">
 	<!-- landing page -->
 	<section class="background_picture">
 			<div class="intro">
@@ -107,9 +107,9 @@
 				<img id="land4" src="landscape/land4.jpg">
 				<img id="land5" src="landscape/land5.jpg">
 				<img id="land6" src="landscape/land6.jpg">
-				<img id="land6" src="landscape/land7.jpg">
-				<img id="land6" src="landscape/land8.jpg">
-				<img id="land6" src="landscape/land9.jpg">
+				<img id="land7" src="landscape/land7.jpg">
+				<img id="land8" src="landscape/land8.jpg">
+				<img id="land9" src="landscape/land9.jpg">
 			</div>
 
 			<div id="Architecture" class="imageStyle">
@@ -155,50 +155,50 @@
 			</div>
 		</div>
 
-		<div class="phoModals">
-			<div id="pho1Modal" class="modal">
+		<div class="landModals" align="center">
+			<div id="land1Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho1Span" class="close">&times;</span><img src="pho1.jpg">
+					<span id="land1Span" class="close">&times;</span><img src="landscape/land1.jpg">
 				</div>
 			</div>
-			<div id="pho2Modal" class="modal">
+			<div id="land2Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho2Span" class="close">&times;</span><img src="pho2.jpg">
+					<span id="land2Span" class="close">&times;</span><img src="landscape/land2.jpg">
 				</div>
 			</div>
-			<div id="pho3Modal" class="modal">
+			<div id="land3Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho3Span" class="close">&times;</span><img src="pho3.jpg">
+					<span id="land3Span" class="close">&times;</span><img src="landscape/land3.jpg">
 				</div>
 			</div>
-			<div id="pho4Modal" class="modal">
+			<div id="land4Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho4Span" class="close">&times;</span><img src="pho4.jpg">
+					<span id="land4Span" class="close">&times;</span><img src="landscape/land4.jpg">
 				</div>
 			</div>
-			<div id="pho5Modal" class="modal">
+			<div id="land5Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho5Span" class="close">&times;</span><img src="pho5.jpg">
+					<span id="land5Span" class="close">&times;</span><img src="landscape/land5.jpg">
 				</div>
 			</div>
-			<div id="pho6Modal" class="modal">
+			<div id="land6Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho6Span" class="close">&times;</span><img src="pho6.jpg">
+					<span id="land6Span" class="close">&times;</span><img src="landscape/land6.jpg">
 				</div>
 			</div>
-			<div id="pho7Modal" class="modal">
+			<div id="land7Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho7Span" class="close">&times;</span><img src="pho7.jpg">
+					<span id="land7Span" class="close">&times;</span><img src="landscape/land7.jpg">
 				</div>
 			</div>
-			<div id="pho8Modal" class="modal">
+			<div id="land8Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho8Span" class="close">&times;</span><img src="pho8.jpg">
+					<span id="land8Span" class="close">&times;</span><img src="landscape/land8.jpg">
 				</div>
 			</div>
-			<div id="pho9Modal" class="modal">
+			<div id="land9Modal" class="modal">
 				<div class="modal-content">
-					<span id="pho9Span" class="close">&times;</span><img src="pho9.jpg">
+					<span id="land9Span" class="close">&times;</span><img src="landscape/land9.jpg">
 				</div>
 			</div>
 		</div>
