--- a/index.html
+++ b/index.html
@@ -53,19 +53,21 @@
 		    </div>
 		</div>
 
-		<div id="snapChatModal" class="modal">
-			<div class="modal-content">
-				<span id="snapChatSpan" class="close">&times;</span>
-				<p>SnapChat Username: andrewzee6</p>
-				<img src="snapChatQR.png" style="border-radius: 8%">
+		<div align="center">
+			<div id="snapChatModal" class="modal">
+				<div class="modal-content">
+					<span id="snapChatSpan"></span>
+					<p>SnapChat Username: andrewzee6</p>
+					<img src="snapChatQR.png" style="border-radius: 8%">
+				</div>
 			</div>
-		</div>
 
-		<div id="weChatModal" class="modal">
-			<div class="modal-content">
-				<span id="weChatSpan" class="close">&times;</span>
-				<p>WeChat ID: drewzhen</p>
-				<img src="weChatQR.png" style="border-radius: 4%; width: 525px; height: 525px">
+			<div id="weChatModal" class="modal">
+				<div class="modal-content">
+					<span id="weChatSpan"></span>
+					<p>WeChat ID: drewzhen</p>
+					<img src="weChatQR.png" style="border-radius: 4%; width: 525px; height: 525px">
+				</div>
 			</div>
 		</div>
 	</section>
@@ -158,47 +160,47 @@
 		<div class="landModals" align="center">
 			<div id="land1Modal" class="modal">
 				<div class="modal-content">
-					<span id="land1Span" class="close">&times;</span><img src="landscape/land1.jpg">
+					<span id="land1Span"></span><img src="landscape/land1.jpg">
 				</div>
 			</div>
 			<div id="land2Modal" class="modal">
 				<div class="modal-content">
-					<span id="land2Span" class="close">&times;</span><img src="landscape/land2.jpg">
+					<span id="land2Span"></span><img src="landscape/land2.jpg">
 				</div>
 			</div>
 			<div id="land3Modal" class="modal">
 				<div class="modal-content">
-					<span id="land3Span" class="close">&times;</span><img src="landscape/land3.jpg">
+					<span id="land3Span"></span><img src="landscape/land3.jpg">
 				</div>
 			</div>
 			<div id="land4Modal" class="modal">
 				<div class="modal-content">
-					<span id="land4Span" class="close">&times;</span><img src="landscape/land4.jpg">
+					<span id="land4Span"></span><img src="landscape/land4.jpg">
 				</div>
 			</div>
 			<div id="land5Modal" class="modal">
 				<div class="modal-content">
-					<span id="land5Span" class="close">&times;</span><img src="landscape/land5.jpg">
+					<span id="land5Span"></span><img src="landscape/land5.jpg">
 				</div>
 			</div>
 			<div id="land6Modal" class="modal">
 				<div class="modal-content">
-					<span id="land6Span" class="close">&times;</span><img src="landscape/land6.jpg">
+					<span id="land6Span"></span><img src="landscape/land6.jpg">
 				</div>
 			</div>
 			<div id="land7Modal" class="modal">
 				<div class="modal-content">
-					<span id="land7Span" class="close">&times;</span><img src="landscape/land7.jpg">
+					<span id="land7Span"></span><img src="landscape/land7.jpg">
 				</div>
 			</div>
 			<div id="land8Modal" class="modal">
 				<div class="modal-content">
-					<span id="land8Span" class="close">&times;</span><img src="landscape/land8.jpg">
+					<span id="land8Span"></span><img src="landscape/land8.jpg">
 				</div>
 			</div>
 			<div id="land9Modal" class="modal">
 				<div class="modal-content">
-					<span id="land9Span" class="close">&times;</span><img src="landscape/land9.jpg">
+					<span id="land9Span"></span><img src="landscape/land9.jpg">
 				</div>
 			</div>
 		</div>
