--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div style="background: rgb(220,220,220);">
 				<div class="description">
 					<p>
-						I'm a student at the University of California, San Diego studying Cognitive Science, specializing in machine learning and computation, class of 2020. 
+						I'm a student at the University of California San Diego studying Data Science, class of 2020.
 					</p>
 
 					<div>&nbsp</div>
@@ -204,6 +204,165 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="landModals" align="center">
+			<div id="arch1Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch1Span"></span><img src="architecture/arch1.jpg">
+				</div>
+			</div>
+			<div id="arch2Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch2Span"></span><img src="architecture/arch2.jpg">
+				</div>
+			</div>
+			<div id="arch3Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch3Span"></span><img src="architecture/arch3.jpg">
+				</div>
+			</div>
+			<div id="arch4Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch4Span"></span><img src="architecture/arch4.jpg">
+				</div>
+			</div>
+			<div id="arch5Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch5Span"></span><img src="architecture/arch5.jpg">
+				</div>
+			</div>
+			<div id="arch6Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch6Span"></span><img src="architecture/arch6.jpg">
+				</div>
+			</div>
+			<div id="arch7Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch7Span"></span><img src="architecture/arch7.jpg">
+				</div>
+			</div>
+			<div id="arch8Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch8Span"></span><img src="architecture/arch8.jpg">
+				</div>
+			</div>
+			<div id="arch9Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch9Span"></span><img src="architecture/arch9.jpg">
+				</div>
+			</div>
+			<div id="arch10Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch10Span"></span><img src="architecture/arch10.jpg">
+				</div>
+			</div>
+			<div id="arch11Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch11Span"></span><img src="architecture/arch11.jpg">
+				</div>
+			</div>
+			<div id="arch12Modal" class="modal">
+				<div class="modal-content">
+					<span id="arch12Span"></span><img src="architecture/arch12.jpg">
+				</div>
+			</div>
+		</div>
+
+		<!--<div class="landModals" align="center">
+			<div id="land1Modal" class="modal">
+				<div class="modal-content">
+					<span id="land1Span"></span><img src="landscape/land1.jpg">
+				</div>
+			</div>
+			<div id="land2Modal" class="modal">
+				<div class="modal-content">
+					<span id="land2Span"></span><img src="landscape/land2.jpg">
+				</div>
+			</div>
+			<div id="land3Modal" class="modal">
+				<div class="modal-content">
+					<span id="land3Span"></span><img src="landscape/land3.jpg">
+				</div>
+			</div>
+			<div id="land4Modal" class="modal">
+				<div class="modal-content">
+					<span id="land4Span"></span><img src="landscape/land4.jpg">
+				</div>
+			</div>
+			<div id="land5Modal" class="modal">
+				<div class="modal-content">
+					<span id="land5Span"></span><img src="landscape/land5.jpg">
+				</div>
+			</div>
+			<div id="land6Modal" class="modal">
+				<div class="modal-content">
+					<span id="land6Span"></span><img src="landscape/land6.jpg">
+				</div>
+			</div>
+			<div id="land7Modal" class="modal">
+				<div class="modal-content">
+					<span id="land7Span"></span><img src="landscape/land7.jpg">
+				</div>
+			</div>
+			<div id="land8Modal" class="modal">
+				<div class="modal-content">
+					<span id="land8Span"></span><img src="landscape/land8.jpg">
+				</div>
+			</div>
+			<div id="land9Modal" class="modal">
+				<div class="modal-content">
+					<span id="land9Span"></span><img src="landscape/land9.jpg">
+				</div>
+			</div>
+		</div>
+
+		<div class="landModals" align="center">
+			<div id="land1Modal" class="modal">
+				<div class="modal-content">
+					<span id="land1Span"></span><img src="landscape/land1.jpg">
+				</div>
+			</div>
+			<div id="land2Modal" class="modal">
+				<div class="modal-content">
+					<span id="land2Span"></span><img src="landscape/land2.jpg">
+				</div>
+			</div>
+			<div id="land3Modal" class="modal">
+				<div class="modal-content">
+					<span id="land3Span"></span><img src="landscape/land3.jpg">
+				</div>
+			</div>
+			<div id="land4Modal" class="modal">
+				<div class="modal-content">
+					<span id="land4Span"></span><img src="landscape/land4.jpg">
+				</div>
+			</div>
+			<div id="land5Modal" class="modal">
+				<div class="modal-content">
+					<span id="land5Span"></span><img src="landscape/land5.jpg">
+				</div>
+			</div>
+			<div id="land6Modal" class="modal">
+				<div class="modal-content">
+					<span id="land6Span"></span><img src="landscape/land6.jpg">
+				</div>
+			</div>
+			<div id="land7Modal" class="modal">
+				<div class="modal-content">
+					<span id="land7Span"></span><img src="landscape/land7.jpg">
+				</div>
+			</div>
+			<div id="land8Modal" class="modal">
+				<div class="modal-content">
+					<span id="land8Span"></span><img src="landscape/land8.jpg">
+				</div>
+			</div>
+			<div id="land9Modal" class="modal">
+				<div class="modal-content">
+					<span id="land9Span"></span><img src="landscape/land9.jpg">
+				</div>
+			</div>
+		</div>-->
 	</section>
 
 	 <!-- <audio loop autoplay> -->
@@ -211,7 +370,7 @@
 	 <!-- </audio> -->
 	 		<!-- footer -->
 	 <footer>
-	 	<p>Photos taken from a Nikon D3300 18-55mm f/3.5-5.6 and a OnePlus 3<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
+	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
 	 	</p>
 	 </footer>
 </body>
