--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@
 			</div>
 
 			<div id="Architecture" class="imageStyle">
-				<img src="architecture/arch1.jpg">
-				<img src="architecture/arch2.jpg">
-				<img src="architecture/arch3.jpg">
-				<img src="architecture/arch4.jpg">
-				<img src="architecture/arch5.jpg">
-				<img src="architecture/arch6.jpg">
-				<img src="architecture/arch7.jpg">
-				<img src="architecture/arch8.jpg">
-				<img src="architecture/arch9.jpg">
-				<img src="architecture/arch10.jpg">
-				<img src="architecture/arch11.jpg">
-				<img src="architecture/arch12.jpg">
+				<img id="arch1" src="architecture/arch1.jpg">
+				<img id="arch2"  src="architecture/arch2.jpg">
+				<img id="arch3"  src="architecture/arch3.jpg">
+				<img id="arch4"  src="architecture/arch4.jpg">
+				<img id="arch5"  src="architecture/arch5.jpg">
+				<img id="arch6"  src="architecture/arch6.jpg">
+				<img id="arch7"  src="architecture/arch7.jpg">
+				<img id="arch8"  src="architecture/arch8.jpg">
+				<img id="arch9"  src="architecture/arch9.jpg">
+				<img id="arch10"  src="architecture/arch10.jpg">
+				<img id="arch11"  src="architecture/arch11.jpg">
+				<img id="arch12"  src="architecture/arch12.jpg">
 			</div>
 
 			<div id="Events" class="imageStyle">
@@ -371,7 +371,7 @@
 	 <!-- </audio> -->
 	 		<!-- footer -->
 	 <footer>
-	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 9:17<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
+	 	<p>Photos taken with a Nikon D3300 and a OnePlus 3 9:26<img src="faviconBlack.png" style="padding-right: 100px; width: 25px; height: 25px; float: right">
 	 	</p>
 	 </footer>
 </body>
